Updated Order for Loop and serialization error and solved other Errors